# qi_unipa_2

./: README.md
qi_unipa_2/: check_dependencies.py  package.xml  setup.cfg  setup.py
qi_unipa_2/Collegamento a Giunture di Pepper/: Giunture_pepper.txt
qi_unipa_2/backup_vari/: CMakeLists.txt
qi_unipa_2/html_pages/: attivo.html  autovalutazione_3_opzioni.html  autovalutazione_5_opzioni.html  comandi_apertura_pag.txt  dati_must.html  disattivo.html  minicog_orologio.html  minicog_parole.html  minicog_parole_verifica.html  registrazione.html  registrazione_completata.html  si_no.html  test_MUST_completato.html  test_MUST_parte1.html  test_MUST_parte2.html  test_MUST_parte3.html  test_emoji.html  test_minicog_completato.html  test_minicog_parte1.html  test_minicog_parte2.html  test_minicog_parte3.html  test_minicog_parte4.html  test_mobilita_completato.html  test_mobilita_parte1.html  test_mobilita_parte2.html  test_mobilita_parte3.html  test_mobilita_parte4.html  test_mobilita_parte5.html  thinking.html
qi_unipa_2/launch/: qi_unipa_2.launch.py
qi_unipa_2/qi_unipa_2/: http_utils.py  qi_unipa_2_audio.py  qi_unipa_2_movement.py  qi_unipa_2_reference.py  qi_unipa_2_sensor.py  qi_unipa_2_server.py  qi_unipa_2_speech.py  qi_unipa_2_stt.py  qi_unipa_2_tablet.py  qi_unipa_2_tracking.py  qi_unipa_2_vision.py  test_audio_pipeline.py  utils.py
qi_unipa_2_interfaces/: CMakeLists.txt  Lista_interfacce.txt  package.xml
qi_unipa_2_interfaces/action/: Browsing.action  Listening.action  Moving.action  Navigating.action  Seeking.action  Talking.action  Walking.action
qi_unipa_2_interfaces/msg/: Battery.msg  Bumper.msg  Emotion.msg  HandTouch.msg  HeadTouch.msg  IMU.msg  Infrared.msg  Sonar.msg  TestData.msg  Track.msg  TrackingState.msg  UserData.msg
qi_unipa_2_interfaces/srv/: GetCameraCoordinates.srv  GetEmotion.srv  GetImage.srv  GetPosition.srv  GetTrackedObjectCoordinates.srv  GetTrackedSubjectCoordinates.srv  MoveToSound.srv  MoveToTrackedObject.srv  PlayAnimation.srv  SetHand.srv  SetJointAngles.srv  SetPosture.srv  SetState.srv  StartTracking.srv  StopTracking.srv  lista.txt
