<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qi_unipa_2</name>
  <version>2.0.0</version>
  <description>Package qi_unipa_2 di ROS2 per il funzionamento del robot Pepper</description>
  <maintainer email="stormtzx@gmail.com">Daniele</maintainer>
  <license>MIT</license>

  <!-- Build tool per Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dipendenza alle interfacce custom -->
  <depend>qi_unipa_2_interfaces</depend>

  <!-- Dipendenze Python -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
