<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qi_unipa_2_interfaces</name>
  <version>1.0.0</version>
  <description>Interfacce per il package qi_unipa_2 per il funzionamento del robot Pepper</description>
  <maintainer email="stormtzx@gmail.com">Daniele</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dipendenze per le interfacce -->
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Gruppo interfacce -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
